[gd_scene load_steps=11 format=3 uid="uid://dywuej1ba7b6n"]

[ext_resource type="Script" uid="uid://b4ykek4nparmo" path="res://scripts/calibrate_navigation.gd" id="1_u13qu"]
[ext_resource type="PackedScene" uid="uid://bvgrdkjyawqom" path="res://scenes/navigation_dial.tscn" id="1_wvrcf"]
[ext_resource type="PackedScene" uid="uid://doq1woy3l8vww" path="res://scenes/plannet.tscn" id="2_l4v0j"]
[ext_resource type="Texture2D" uid="uid://dsb0yju8v0hs4" path="res://assets/Untitled_Artwork 19.png" id="2_x1x3g"]
[ext_resource type="PackedScene" uid="uid://dfsvi272xo3q6" path="res://scenes/GUI.tscn" id="4_c1nhr"]
[ext_resource type="Texture2D" uid="uid://vgiybkpmr2sm" path="res://assets/Untitled_Artwork 33.png" id="6_8bup0"]
[ext_resource type="PackedScene" uid="uid://crlpnflpiyri0" path="res://scenes/crosshair.tscn" id="7_jgvpq"]
[ext_resource type="AudioStream" uid="uid://dhkfpijatm8h4" path="res://assets/siren-a-248662.mp3" id="8_njmtm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wvrcf"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l4v0j"]
bg_color = Color(1.347661e-06, 0.6255408, 0.63391316, 1)

[node name="CalibrateNavigation" type="Node2D"]
script = ExtResource("1_u13qu")

[node name="PlannetBackground" type="TextureRect" parent="."]
offset_right = 4096.0
offset_bottom = 1714.0
scale = Vector2(0.39999956, 0.39999956)
texture = ExtResource("6_8bup0")

[node name="DialBackground" type="TextureRect" parent="."]
offset_right = 4096.0
offset_bottom = 1714.0
scale = Vector2(0.39999938, 0.39999938)
texture = ExtResource("2_x1x3g")

[node name="DialsContainer" type="Node2D" parent="."]

[node name="NavigationDial" parent="DialsContainer" instance=ExtResource("1_wvrcf")]
position = Vector2(212.00002, 213)
scale = Vector2(0.75, 0.75)

[node name="NavigationDial2" parent="DialsContainer" instance=ExtResource("1_wvrcf")]
position = Vector2(692, 219.00002)
scale = Vector2(0.75, 0.75)
dial_index = 1

[node name="NavigationDial3" parent="DialsContainer" instance=ExtResource("1_wvrcf")]
position = Vector2(419.00003, 379)
scale = Vector2(0.75, 0.75)
dial_index = 2

[node name="NavigationDial4" parent="DialsContainer" instance=ExtResource("1_wvrcf")]
position = Vector2(970, 363)
scale = Vector2(0.75, 0.75)
dial_index = 3

[node name="Plannet" parent="." instance=ExtResource("2_l4v0j")]

[node name="Crosshair" parent="." instance=ExtResource("7_jgvpq")]
offset_left = -1076.0
offset_top = -313.0
offset_right = 1264.0
offset_bottom = 2027.0

[node name="Gui" parent="." instance=ExtResource("4_c1nhr")]

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_top = 622.0
offset_right = 1154.0
offset_bottom = 649.0
theme_override_styles/background = SubResource("StyleBoxFlat_wvrcf")
theme_override_styles/fill = SubResource("StyleBoxFlat_l4v0j")
show_percentage = false

[node name="BGAlarm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_njmtm")
volume_db = -25.864
autoplay = true
bus = &"New Bus"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = 633.0
offset_top = 5.999999
offset_right = 673.0
offset_bottom = 46.0
scale = Vector2(12.759997, 2.8400002)
color = Color(1, 1, 1, 0.1882353)

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 69.0
offset_right = 550.0
offset_bottom = 58.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 0.47234213, 0.3763518, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 42
text = "Calibrate Navigation"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InstructionLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 74.0
offset_top = 28.0
offset_right = 555.0
offset_bottom = 109.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.7756669, 0.51814365, 0.7091601, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 28
text = "Space or RMB to Accelerate. "
horizontal_alignment = 1
vertical_alignment = 1
